Fixed Overflow.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -325,7 +325,7 @@ table th.defaults{
     border-radius: 3px;
 
     max-height: 400px;
-    overflow: scroll;
+    overflow-y: scroll;
     z-index: 9999;
 }
 
